tests/snapshots/cli__change@completely_flat_toplevel_nixpkgs.snap
---
source: tests/cli.rs
assertion_line: 132
info:
  program: flake-edit
  args:
    - "--flake"
    - /home/kenji/dev/flake-edit/tests/fixtures/completely_flat_toplevel.flake.nix
    - "--diff"
    - change
    - nixpkgs
    - "github:nixos/nixpkgs/nixos-24.05"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -1,7 +1,7 @@
 {
   description = "Edit your flake inputs with ease";

-  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
+  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
   inputs.flake-utelinos.url = "github:numtide/flake-utils";
   inputs.rust-overlay.url = "github:oxalica/rust-overlay";
   inputs.rust-overlay.inputs.nixpkgs.follows = "nixpkgs";

----- stderr -----
