tests/snapshots/cli__change@flat_nested_flat_nixpkgs.snap
---
source: tests/cli.rs
assertion_line: 150
info:
  program: flake-edit
  args:
    - "--flake"
    - /home/kenji/dev/flake-edit/tests/fixtures/flat_nested_flat.flake.nix
    - "--diff"
    - change
    - nixpkgs
    - "github:nixos/nixpkgs/nixos-24.05"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -1,7 +1,7 @@
 {
   description = "flat nested flat test";

-  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
+  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
   inputs.flake-utils.url = "github:numtide/flake-utils/master";
   inputs.poetry2nix = {
     inputs.flake-utils.follows = "flake-utils";

----- stderr -----
