tests/snapshots/cli__change@one_level_nesting_flat_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/one_level_nesting_flat.flake.nix"
    - "--diff"
    - change
    - nixpkgs
    - "github:nixos/nixpkgs/nixos-24.05"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -2,7 +2,7 @@
   description = "Edit your flake inputs with ease";

   inputs = {
-    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
+    nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
     flake-utelinos.url = "github:numtide/flake-utils";
     rust-overlay.url = "github:oxalica/rust-overlay";
     rust-overlay.inputs.nixpkgs.follows = "nixpkgs";

----- stderr -----
