tests/snapshots/cli__change@root_rust-overlay.snap
---
source: tests/cli.rs
assertion_line: 132
info:
  program: flake-edit
  args:
    - "--flake"
    - /home/kenji/dev/flake-edit/tests/fixtures/root.flake.nix
    - "--diff"
    - change
    - rust-overlay
    - "github:oxalica/rust-overlay/v1.0.0"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -7,7 +7,7 @@
     flake-utelinos.url = "github:numtide/flake-utils";

     rust-overlay = {
-      url = "github:oxalica/rust-overlay";
+      url = "github:oxalica/rust-overlay/v1.0.0";
       inputs.nixpkgs.follows = "nixpkgs";
       inputs.flake-utils.follows = "flake-utils";
     };

----- stderr -----
