tests/snapshots/cli__change_nonexistent@root_nonexistent-input.snap
---
source: tests/cli.rs
assertion_line: 338
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--diff"
    - change
    - nonexistent-input
    - "github:foo/bar"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: input 'nonexistent-input' not found in the flake

hint: to add it, run `flake-edit add nonexistent-input <flakeref>`; see declared inputs with `flake-edit list`
